--- a/src/pages/safety_ioc/safety_ioc.html
+++ b/src/pages/safety_ioc/safety_ioc.html
@@ -4,8 +4,14 @@
     <div class="row">
         <div class="col-md-12">
             <div class="nav-tabs-custom" style="margin-bottom: 0px;" >
-                <div style="margin:20px">
-                    <div class="form-group"style="margin-top:20px;padding-top: 10px">
+                    <ul class="nav nav-tabs" style="margin-bottom:-1px;border-bottom: 0">
+                            <li class="active">
+                                <a href="javascript:void();" data-toggle="tab" aria-expanded="true">
+                                    <i class="fa fa-bell-o"></i> IOC扫描器</a>
+                            </li>
+                        </ul>
+                <div style="margin:5px 20px">
+                    <div class="form-group" style="margin-bottom:5px 20px">
                         <label for="InputFile">上传IOC</label>
                         <input type="file" id="InputFile" style="display: none;" accept="application/x-msdownload" data-url="addversion" name="file">
                         <br>
@@ -16,7 +22,6 @@
                     </div>
                 </div>
                 <div class="form-group col-md-1">
-                    <label style="width: 100%;">&nbsp;</label>
                     <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
                 </div>
                 <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
