--- a/src/pages/safety_ioc/safety_ioc.html
+++ b/src/pages/safety_ioc/safety_ioc.html
@@ -13,9 +13,8 @@
                     <div class="input-file">
                         <form id="upload" method="post" enctype="multipart/form-data">
                             <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
-                            <input type="file" name="file" id="avatar" />
+                            <input type="file" name="file" id="avatar" accept=".txt,.ioc"  />
                             <a href="javascript:void(0);" ng-click="uploadPic()" class="button-selectimg" id="avatsel1">上传文件</a>
-                            <!-- <span>上传成功！</span> -->
                         </form>
                     </div>
                         
