--- a/src/pages/safety_ioc/safety_ioc.html
+++ b/src/pages/safety_ioc/safety_ioc.html
@@ -14,10 +14,14 @@
                         <form id="upload" method="post" enctype="multipart/form-data">
                             <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
                             <input type="file" name="file" id="avatar" accept=".txt,.ioc"  />
-                            <a href="javascript:void(0);" ng-click="uploadPic()" class="button-selectimg" id="avatsel1">上传文件</a>
+                            <button ng-click="uploadPic()" class="btn btn-primary upload_button" ng-disabled="upload_true" id="avatsel1">上传文件</button>
                         </form>
                     </div>
-                        
+                    <div ng-show="progress_if" class="progress progress-striped active" style="margin: 20px 0;border-radius: 5px;width: 300px">
+                        <div class="progress-bar progress-bar-success" id="progress" role="progressbar" 
+                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" >
+                        </div>
+                     </div>
                     <!-- <form id="upload" enctype="multipart/form-data" method="post">
                         <input type="file" name="file" id="pic" />
                         <input type="button" value="提交" ng-click="uploadPic()" />
