--- a/src/pages/safety_ioc/safety_ioc.html
+++ b/src/pages/safety_ioc/safety_ioc.html
@@ -9,46 +9,30 @@
                     </li>
                 </ul>
                 <div style="margin:5px 20px">
-            
                     <div class="input-file">
                         <form id="upload" method="post" enctype="multipart/form-data">
                             <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
-                            <input type="file" name="file" id="avatar" accept=".txt,.ioc"  />
+                            <input type="file" name="file" id="avatar" accept=".txt,.ioc" />
                             <button ng-click="uploadPic()" class="btn btn-primary upload_button" ng-disabled="upload_true" id="avatsel1">上传文件</button>
                         </form>
                     </div>
                     <div ng-show="progress_if" class="progress progress-striped active" style="margin: 20px 0;border-radius: 5px;width: 300px">
-                        <div class="progress-bar progress-bar-success" id="progress" role="progressbar" 
-                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" >
+                        <div class="progress-bar progress-bar-success" id="progress" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                         </div>
-                     </div>
-                    <!-- <form id="upload" enctype="multipart/form-data" method="post">
-                        <input type="file" name="file" id="pic" />
-                        <input type="button" value="提交" ng-click="uploadPic()" />
-                        <span class="showUrl"></span>
-                        <img src="" class="showPic" alt="">
-                    </form> -->
-
-                    <!-- <div class="form-group" style="margin-bottom:5px 20px">
-                        <label for="InputFile">上传IOC</label>
-                        <input type="file" id="InputFile" style="display: none;" accept="application/x-msdownload" data-url="addversion" name="file">
-                        <br>
-                        <label class="glyphicon glyphicon-plus-sign text-green" style="font-size: 48px" for="InputFile"></label>
-                        <span ng-bind="sensorVersion.FileName" style="font-size: 14px;" class="ng-binding"></span>
-
-                    </div> -->
+                    </div>
                 </div>
                 <div style="margin:20px">
-                    <a ng-click="download_temp()"> 下载模版</a>
-                    <span>上传的文件请按照模板的格式</span>
+                    <span> 请上传.txt（
+                        <a ng-click="download_temp()"> 下载模版</a>）或者.ioc格式文件。</span>
                 </div>
                 <div class="form-group col-md-1">
                     <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
                 </div>
+                <div class="col-md-6" style="margin-top: 10px">
+               <span>文件上传成功之后，请点击搜索按钮，进行文件筛选。</span>     
+                </div>
                 <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
-                    <!-- protect -->
                     <div class="tab-pane active" id="protect">
-
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="box box-solid" style="margin-top:10px;">
@@ -64,26 +48,14 @@
                                                         <th>创建时间</th>
                                                         <th>操作</th>
                                                     </tr>
-                                                    <tr>
-                                                        <td>ioc文件</td>
-                                                        <td>50%</td>
-                                                        <td>完成</td>
+                                                    <tr ng-repeat="item in pages.data">
+                                                        <td ng-bind="item.upload_file_name">ioc文件</td>
+                                                        <td ng-bind="item.create_percent">50%</td>
+                                                        <td ng-bind="item.create_status == 0?'失败':'成功'">完成</td>
                                                         <td class="cursor">
                                                             <img src="../src/images/icos/download.png" ng-click="download(item.id)" width="16" height="16" alt="">
                                                         </td>
-                                                        <td>2018-07-20 05:00:00</td>
-                                                        <td class="cursor">&nbsp;&nbsp;
-                                                            <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>ioc文件</td>
-                                                        <td>50%</td>
-                                                        <td>完成</td>
-                                                        <td class="cursor">
-                                                            <img src="../src/images/icos/download.png" ng-click="download(item.id)" width="16" height="16" alt="">
-                                                        </td>
-                                                        <td>2018-07-20 05:00:00</td>
+                                                        <td ng-bind="item.create_time" >2018-07-20 05:00:00</td>
                                                         <td class="cursor">&nbsp;&nbsp;
                                                             <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
                                                         </td>
@@ -92,47 +64,42 @@
                                                 <!-- angularjs分页 -->
                                                 <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                                     <em>共有
-                                                        <span ng-bind="pages0.count"></span>条</em>
+                                                        <span ng-bind="pages.count"></span>条</em>
                                                     <!-- angularjs分页 -->
                                                     <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-if="pages0.pageNow>1">上一页</a>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages0.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
                                                         </li>
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(1)" ng-if="pages0.pageNow>1">1</a>
+                                                            <a href="javascript:void(0);" ng-click="getPage(1)" ng-if="pages.pageNow>1">1</a>
                                                         </li>
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-if="pages0.pageNow>4">...</a>
-                                                        </li>
-
-                                                        <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-2)" ng-bind="pages0.pageNow-2" ng-if="pages0.pageNow>3"></a>
+                                                            <a href="javascript:void(0);" ng-if="pages.pageNow>4">...</a>
                                                         </li>
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-bind="pages0.pageNow-1" ng-if="pages0.pageNow>2"></a>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-2)" ng-bind="pages.pageNow-2" ng-if="pages.pageNow>3"></a>
                                                         </li>
-
+                                                        <li>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages0.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
+                                                        </li>
                                                         <li class="active">
-                                                            <a href="javascript:void(0);" ng-bind="pages0.pageNow"></a>
+                                                            <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-bind="pages.pageNow+1" ng-if="pages.pageNow<pages.maxPage-1"></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
                                                         </li>
 
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-bind="pages0.pageNow+1" ng-if="pages0.pageNow<pages0.maxPage-1"></a>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages.maxPage)" ng-bind="pages.maxPage" ng-if="pages.pageNow<pages.maxPage"></a>
                                                         </li>
                                                         <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+2)" ng-bind="pages0.pageNow+2" ng-if="pages0.pageNow<pages0.maxPage-2"></a>
-                                                        </li>
-
-
-                                                        <li>
-                                                            <a href="javascript:void(0);" ng-if="pages0.pageNow<pages0.maxPage-3">...</a>
-                                                        </li>
-
-                                                        <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.maxPage)" ng-bind="pages0.maxPage" ng-if="pages0.pageNow<pages0.maxPage"></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-if="pages0.pageNow<pages0.maxPage">下一页</a>
+                                                            <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -143,8 +110,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
