--- a/src/pages/set_yara/set_yara.html
+++ b/src/pages/set_yara/set_yara.html
@@ -20,7 +20,7 @@
                     <div class="input-file" style="display: none">
                         <form id="upload" method="post" enctype="multipart/form-data">
                             <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
-                            <input type="file" name="file" id="avatar" accept="tar.gz" />
+                            <input type="file" name="file" id="avatar" />
                             <button ng-click="uploadPic()" class="btn btn-primary upload_button" ng-disabled="upload_true" id="avatsel1">上传文件</button>
                         </form>
                     </div>
